@startuml create_user
Actor Client
Boundary CreateUserController
Control CreateUserUsecase
Entity UserMongodb
Entity User

Client -> CreateUserController: handle(request)
CreateUserController -> CreateUserController: logger.info("Init")
CreateUserController -> CreateUserController: validator.validate(request)

alt Invalid Request
    CreateUserController -> CreateUserController: logger.warn(error)
    CreateUserController --> Client: HTTP 400 (validation error)
end
CreateUserController -> CreateUserUsecase: execute(request)

CreateUserUsecase -> CreateUserUsecase: logger.info("Init")
CreateUserUsecase -> UserMongodb: getUser({ email })
UserMongodb --> CreateUserUsecase: user|null

alt Email Already Exists
    CreateUserUsecase -> CreateUserUsecase: logger.warn("Email in use")
    CreateUserUsecase --> CreateUserController: EmailInUseError
    CreateUserController --> Client: HTTP 400 (EmailInUseError)
end

CreateUserUsecase -> User: create(request)
User --> CreateUserUsecase: new User instance

CreateUserUsecase -> User: toPersistence()
User --> CreateUserUsecase: persistenceObject

CreateUserUsecase -> UserMongodb: save(persistenceObject)
UserMongodb --> CreateUserUsecase: void

CreateUserUsecase -> User: toReturn()
User --> CreateUserUsecase: sanitizedUser

CreateUserUsecase --> CreateUserController: { user }

CreateUserController -> CreateUserController: logger.info("Completed")
CreateUserController --> Client: HTTP 201 (created user)


@enduml

